# mil

./: .gitignore  README.md  RUN_LOG.md  pyproject.toml
apps/: explorer.py
artifacts/: activation_heatmap.html  attention_layer0_head0.html  control_report.json  patch_bar.html  patch_result.json  sae_unavailable.txt  token_deltas.html
artifacts/deduped_sae/: activation_heatmap.html  attention_layer0_head0.html  control_report.json  feature_table.html  patch_bar.html  patch_result.json  sae_activation_heatmap.html  token_deltas.html
artifacts/guided_demo/: attention_layer0_head0.html  attention_layer0_head0_heatmap.html  behavior_logits.json  causal_heatmap.json  causal_heatmap_control.html  causal_heatmap_difference.html  causal_heatmap_target.html  demo_manifest.json  feature_raster.html  feature_specificity.html  feature_specificity.json  feature_table.html  logit_lens.json  patch_before_after.html  patch_summary.json  prompt_family.json  residual_trajectory.html  residual_trajectory.json  token_deltas.html  tokenization.json
mil/: __init__.py  agent.py  app_style.py  capture.py  config.py  gpu.py  guided_demo.py  prompt_data.py  refs.py
mil/backend/: local.py  (+2 more)
scripts/: bootstrap_uv.sh  build_guided_demo_artifacts.py  gpu_check.py  run_demo.py
tests/: conftest.py  test_agent_schemas.py  test_app_style.py  test_backend_local.py  test_capture.py  test_guided_demo.py  test_refs.py  test_tools_activations.py  test_tools_controls.py  test_tools_features.py  test_tools_interventions.py  test_tools_logging.py  test_track_recent.py  test_viz.py  test_viz_guided.py
(+8 files in other folders)
